fix: Nueva version 6.8.2 Entrego la nueva versión liberada por el ministerio en Enero de 2026